MEDDRA-6: Remove scope excluded concepts - fix SQL